Docker - whisper_asr_node

--- a/src/google_tts_node/Dockerfile
+++ b/src/google_tts_node/Dockerfile
@@ -1,13 +1,13 @@
-# Use the ROS 2 Humble base image
+# ROS 2 Humble
 FROM ros:humble
 
-# Set working directory
+# Directory
 WORKDIR /root/df_ws/src/google_tts_node
 
 # Copy the workspace files
 COPY . .
 
-# Build the workspace
+# Dependencies
 RUN apt-get update && apt-get install -y \
     python3-pip \
     build-essential \
@@ -15,8 +15,8 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install gtts pydub
-RUN sudo apt install ffmpeg
+# RUN sudo apt install ffmpeg
 RUN /bin/bash -c "source /opt/ros/humble/setup.bash && colcon build"
 
-# Source the workspace when starting the container
+# Sourcing and running the code
 CMD ["/bin/bash", "-c", "source /opt/ros/humble/setup.bash && source install/setup.bash && ros2 run google_tts_node google_tts"]
