--- a/src/google_tts_node/package.xml
+++ b/src/google_tts_node/package.xml
@@ -3,9 +3,11 @@
 <package format="3">
   <name>google_tts_node</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="amenephous@todo.todo">amenephous</maintainer>
-  <license>TODO: License declaration</license>
+  <description>
+    A ROS 2 package for Text-to-Speech using Google TTS API.
+  </description>
+  <maintainer email="anujnarain@nyu.edu">Anuj Narain</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
