Fixed: Whisper_cpp issue

--- a/src/whisper_asr_node/Dockerfile
+++ b/src/whisper_asr_node/Dockerfile
@@ -5,12 +5,22 @@ FROM ros:humble
 WORKDIR /root/df_ws/src/whisper_asr_node
 COPY . .
 
+# Cloning the whisper_cpp repository
+RUN git clone https://github.com/ggerganov/whisper.cpp src/whisper_asr_node/whisper_cpp && \
+rm -rf src/whisper_asr_node/whisper_cpp/.git
+
+
+
 # Dependencies
 RUN apt-get update && apt-get install -y \
     python3-pip \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
+# Building the GGML file
+RUN mkdir -p whisper_cpp/models && \
+    wget -P whisper_cpp/models https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-base.bin
+    
 # Build the workspace
 RUN /bin/bash -c "source /opt/ros/humble/setup.bash && colcon build"
 
